--- a/src/app/leden/ledendetails/ledendetails.component.html
+++ b/src/app/leden/ledendetails/ledendetails.component.html
@@ -1,5 +1,10 @@
+
+  <h6>    Gloabl Begin>>  {{globalService.globalVar}}  <<End </h6>
+
 Ledendetails
 <form #lidForm="ngForm" (ngSubmit)="onSubmit(lidForm)">
+
+
 
   <div class="form-group">
     <label>Id</label>
