--- a/src/app/leden/ledenlijst/ledenlijst.component.html
+++ b/src/app/leden/ledenlijst/ledenlijst.component.html
@@ -1,5 +1,9 @@
+<h6>    Gloabl Begin>>  {{globalService.globalVar}}  <<End </h6>
+
+
 <h6 class="text-center">Leden lijst</h6>
 <br>
+
 <table class="table table-sm table-hover">
   <tr *ngFor="let lid of ledenLijst">
     <td>{{lid.id}} {{lid.naam}}</td>
